--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -11,4 +11,5 @@ COPY . .
 # Sinalize que aplicação expõe a porta 3000
 EXPOSE 3000
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
+ENTRYPOINT [ "npm", "start" ]
 # Dica: Leia a seção Docker e Docker-compose no README para mais informações
