--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -13,4 +13,4 @@ EXPOSE 3001
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
 ENTRYPOINT [ "npm", "run"]
 # Dica: Leia a seção Docker e Docker-compose no README para mais informações
-# CMD [  "start" ]
+CMD [ "start" ]
