--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -3,6 +3,7 @@ FROM node:16.14-alpine
 # Mudar para o diretório de trabalho /app-backend
 WORKDIR /app-backend
 # Copiar os package.json, package-lock.json e packages.npm para o container
+COPY packages.npm ./
 COPY package*.json ./
 # Instalar as dependências Node
 RUN npm install
